openshift/pgadmin4/deployment.yaml
kind: List
apiVersion: v1
metadata:
  name: rhpam70-authoring
items:
- apiVersion: extensions/v1beta1
  kind: Deployment
  metadata:
    labels:
      app: pgadmin4
    name: pgadmin4
  spec:
    replicas: 1
    template:
      metadata:
        labels:
          app: pgadmin4
          name: pgadmin4
      spec:
        containers:
        - env:
          - name: PGADMIN_SETUP_EMAIL
            valueFrom:
              secretKeyRef:
                key: pgadmin4.username
                name: pgadmin4-credentials
          - name: PGADMIN_SETUP_PASSWORD
            valueFrom:
              secretKeyRef:
                key: pgadmin4.password
                name: pgadmin4-credentials
          image: crunchydata/crunchy-pgadmin4:centos7-9.6.8-1.8.2
          name: pgadmin4
          ports:
          - containerPort: 5050
            name: http
          resources:
            limits:
              memory: 200Mi
            requests:
              memory: 100Mi
          volumeMounts:
          - mountPath: /var/lib/pgadmin
            name: pgadmin4-persistence
            readOnly: false            
          - mountPath: /run/httpd
            name: run
            readOnly: false
        volumes:
        - name: pgadmin4-persistence
          emptyDir:
        - name: run
          emptyDir:
            medium: Memory            
- apiVersion: v1
  kind: Service
  metadata:
    labels:
      app: pgadmin4
    name: pgadmin4
  spec:
    ports:
    - name: http
      port: 5050
      protocol: TCP
      targetPort: http
    selector:
      name: pgadmin4
- apiVersion: v1
  kind: Route
  metadata:
    labels:
      app: pgadmin4
    name: pgadmin4
  spec:
    port:
      targetPort: http
    to:
      kind: Service
      name: pgadmin4
